Fixed Bugs On Businss Logics and Refactoring On DB Design

--- a/Academy.EntityFramework/Academy.EntityFramework.csproj
+++ b/Academy.EntityFramework/Academy.EntityFramework.csproj
@@ -48,7 +48,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Concrete\AttendanceDetail.cs" />
     <Compile Include="Concrete\ComplexTypes\AttendanceReport.cs" />
+    <Compile Include="Concrete\DTOs\AttendanceDetailModelDto.cs" />
     <Compile Include="Concrete\DTOs\AttendanceModelDto.cs" />
     <Compile Include="Concrete\Category.cs" />
     <Compile Include="Concrete\Course.cs" />
